fix(java17): replace List.getFirst() with get(0) in count-recompute race test
List.getFirst() is a JDK 21+ API. Use the JDK 17-compatible get(0)
equivalent instead.